--- a/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
+++ b/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
@@ -16,13 +16,13 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin/usuarios">Usuarios</a>
+          <a class="nav-link active" aria-current="page" routerLink="/admin/usuarios">Usuarios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/admin/salas">Salas</a>
+          <a class="nav-link active" routerLink="/admin/salas">Salas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/admin/cursos">Cursos</a>
+          <a class="nav-link active" routerLink="/admin/cursos">Cursos</a>
         </li>
       </ul>
 
