--- a/Notifica-FrontEnd/src/styles.scss
+++ b/Notifica-FrontEnd/src/styles.scss
@@ -1,13 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/shared.css';
 
-.centralizar{
-    text-align: center;
-   
-}
-
-body{
-    background-color: #00ff7b91;
-}
 .centralizar {
   text-align: center;
 }
@@ -16,6 +9,6 @@ body{
   text-align: right;
 }
 
-.body {
-  background-color: rgb(226, 226, 226);
+body {
+  background-color: #f5f5f5;
 }
