--- a/Notifica-FrontEnd/src/app/components/layout/login/login.component.html
+++ b/Notifica-FrontEnd/src/app/components/layout/login/login.component.html
@@ -10,20 +10,13 @@
             <h3>Autentique-se</h3>
             <br>
             <mdb-form-control>
-              <input mdbInput type="text" id="usuario" class="form-control" [(ngModel)]="usuario" />
-              <label mdbLabel class="form-label" for="usuario">Usuário</label>
+              <input mdbInput type="email" id="emailLogin" class="form-control" [(ngModel)]="dadosLogin.email" />
+              <label mdbLabel class="form-label" for="emailLogin">Email</label>
             </mdb-form-control>
             <br>
             <mdb-form-control>
-              <input mdbInput type="password" id="senha" class="form-control" [(ngModel)]="senha" />
-              <label mdbLabel class="form-label" for="senha">Senha</label>
-            </mdb-form-control>
-            <br>
-            <mdb-form-control>
-              <select class="form-control" [(ngModel)]="selectedRole">
-                <option *ngFor="let role of roles" [value]="role.value">{{ role.label }}</option>
-              </select>
-              <label mdbLabel class="form-label">Tipo de Usuário</label>
+              <input mdbInput type="password" id="senhaLogin" class="form-control" [(ngModel)]="dadosLogin.senha" />
+              <label mdbLabel class="form-label" for="senhaLogin">Senha</label>
             </mdb-form-control>
             <br>
             <button type="button" class="btn btn-primary btn-rounded" mdbRipple (click)="login()">
@@ -40,37 +33,37 @@
             <h3>Criar Conta</h3>
             <br>
             <mdb-form-control>
-              <input mdbInput type="text" id="nome" class="form-control" [(ngModel)]="nome" />
+              <input mdbInput type="text" id="nome" class="form-control" [(ngModel)]="dadosCadastro.nome" />
               <label mdbLabel class="form-label" for="nome">Nome Completo</label>
             </mdb-form-control>
             <br>
             <mdb-form-control>
-              <input mdbInput type="email" id="email" class="form-control" [(ngModel)]="email" />
+              <input mdbInput type="email" id="email" class="form-control" [(ngModel)]="dadosCadastro.email" />
               <label mdbLabel class="form-label" for="email">Email</label>
             </mdb-form-control>
             <br>
             <mdb-form-control>
-              <input mdbInput type="text" id="cpf" class="form-control" [(ngModel)]="cpf" maxlength="14" placeholder="000.000.000-00" />
+              <input mdbInput type="text" id="cpf" class="form-control" [(ngModel)]="dadosCadastro.cpf" maxlength="14" placeholder="000.000.000-00" />
               <label mdbLabel class="form-label" for="cpf">CPF</label>
             </mdb-form-control>
             <br>
             <mdb-form-control>
-              <input mdbInput type="text" id="usuarioReg" class="form-control" [(ngModel)]="usuario" />
+              <input mdbInput type="text" id="usuarioReg" class="form-control" [(ngModel)]="dadosCadastro.usuario" />
               <label mdbLabel class="form-label" for="usuarioReg">Usuário</label>
             </mdb-form-control>
             <br>
             <mdb-form-control>
-              <input mdbInput type="password" id="senhaReg" class="form-control" [(ngModel)]="senha" />
+              <input mdbInput type="password" id="senhaReg" class="form-control" [(ngModel)]="dadosCadastro.senha" />
               <label mdbLabel class="form-label" for="senhaReg">Senha</label>
             </mdb-form-control>
             <br>
             <mdb-form-control>
-              <input mdbInput type="password" id="confirmSenha" class="form-control" [(ngModel)]="confirmSenha" />
+              <input mdbInput type="password" id="confirmSenha" class="form-control" [(ngModel)]="dadosCadastro.confirmSenha" />
               <label mdbLabel class="form-label" for="confirmSenha">Confirmar Senha</label>
             </mdb-form-control>
             <br>
             <mdb-form-control>
-              <select class="form-control" [(ngModel)]="selectedRole">
+              <select class="form-control" [(ngModel)]="dadosCadastro.role">
                 <option *ngFor="let role of roles" [value]="role.value">{{ role.label }}</option>
               </select>
               <label mdbLabel class="form-label">Tipo de Usuário</label>
