--- a/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
+++ b/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
@@ -3,7 +3,7 @@
   <!-- Container wrapper -->
   <div class="container-fluid">
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="/">SISTEMA</a>
+    <a class="navbar-brand" routerLink="/">SISTEMA</a>
 
     <!-- Toggle button -->
     <button class="navbar-toggler" type="button" (click)="basicNavbar.toggle()" aria-expanded="false"
@@ -16,13 +16,13 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin/usuarios">Usuarios</a>
+          <a class="nav-link active" aria-current="page" routerLink="/admin/usuarios">Usuarios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/admin/salas">Salas</a>
+          <a class="nav-link active" routerLink="/admin/salas">Salas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/admin/cursos">Cursos</a>
+          <a class="nav-link active" routerLink="/admin/cursos">Cursos</a>
         </li>
       </ul>
 
