Adicionado novas funções no "visualizar chamados"
Agora existe um botão para abrir novas opções no "visualizar-chamados" e na  "tela-funcionarios" para ir para a visualização dos chamados

--- a/Notifica-FrontEnd/src/app/components/tela-de-funcionarios/tela-de-funcionarios.component.html
+++ b/Notifica-FrontEnd/src/app/components/tela-de-funcionarios/tela-de-funcionarios.component.html
@@ -43,6 +43,7 @@
           <span class="arrow" [class.rotated]="showDropdown">▼</span>
         </button>
         <div class="dropdown-menu" [class.show]="showDropdown">
+          <button routerLink="/visualizar-chamados" class="dropdown-item">Visualizar Chamados</button>
           <button routerLink="/admin/usuarios" class="dropdown-item">Usuários</button>
           <button routerLink="/admin/salas" class="dropdown-item">Salas</button>
           <button routerLink="/admin/cursos" class="dropdown-item">Cursos</button>
