--- a/Notifica-FrontEnd/src/app/components/visualizar-chamados/visualizar-chamados.component.html
+++ b/Notifica-FrontEnd/src/app/components/visualizar-chamados/visualizar-chamados.component.html
@@ -36,6 +36,9 @@
       <button routerLink="/historico" class="nav-item">
         Protocolos
       </button>
+      <button (click)="voltar()" class="nav-item">
+        ← Voltar
+      </button>
       
       
     </nav>
